--- a/3er Semestre/AYED/Resoluciones/Práctica 2/.README.md
+++ b/3er Semestre/AYED/Resoluciones/Práctica 2/.README.md
@@ -1,1 +1,1 @@
-# En la práctica 2 la mayoria de ejercicios estan resueltos en un solo proyecto
+## En la práctica 2 la mayoria de ejercicios estan resueltos en un solo proyecto
